--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
   },
-  "include": ["src/client", "src/main.tsx", "src/App.tsx"]
+  "include": ["src"]
 }
